tests/fixtures/positive/naming/ForbiddenClassName.kt
package naming

class Manager {
    fun doWork() {}
}
