tests/fixtures/negative/naming/ForbiddenClassName.kt
package naming

class UserService {
    fun doWork() {}
}
